Version ClaSS-0.9.18 release (2010/4/30)
-----------------------------------------

Included a late to registration count on the Attendance Profile.



Version ClaSS-0.9.17 release (2010/4/20)
-----------------------------------------

Used projected balance near to zero to prevent new orders being placed.

No longer allow material items on order with unitcost value of zero.

Included an asstable for labelling the student tracking sheet.

Finally included day-by-day codes to the attendance summary, doing
both AM and PM. Plus localised list of absence codes.

Fix to the 'last' autofill option on the register.


Version ClaSS-0.9.16 release (2010/3/30)
-----------------------------------------

Added an eportoflio updateUser function.

Improved the cron so that when option is set it only calls the specified script.

Included Merits on the reports.


Version ClaSS-0.9.15 release (2010/3/21)
-----------------------------------------

The next budget year now auto-populates with new budgets by
replicating the existing structure.

New ldap functions to modify and delete student profile photos.

Major change to how the print and chart windows work. The xml and xslt
is now processed in the parent window and the window is launched
contianing the xhtml result. This resolves a compatibility issue with
Firefox 3.6.

Moved most of the eportfolio account management over to a cron script
which scynchronises student and contact accounts with the ClaSS
database.

Added a cron line option parameter to run a named script.

Fixed typo in fetchCommunity function.



Version ClaSS-0.9.14 release (2010/2/26)
-----------------------------------------

Small improvement to the report_profiles_print script to order the bands.

Correction to how education visits are counted in calculating absences.

New ldap functions for storing photos (both staff and student) and
cached locally in a images/tmp folder.

Added a default blank profile photo.


Version ClaSS-0.9.13 release (2010/2/02)