@@ -23,7 +23,7 @@ function get_student_photo($epfun, $s_ldap_host=null, $s_ldap_rdn=null, $s_ldap_
 	if(!$s_base_tree_node){
 		$s_base_tree_node='ou=student,ou=people,dc='.$CFG->ldapdc1.',dc='.$CFG->ldapdc2;
 		}
-	return get_photo2($sid, $s_ldap_host, $s_ldap_rdn, $s_ldap_pass,$s_base_tree_node, $s_object_class);
+	return get_photo($sid, $s_ldap_host, $s_ldap_rdn, $s_ldap_pass,$s_base_tree_node, $s_object_class);
 	}
 
 
@@ -46,6 +46,103 @@ function get_user_photo($userid, $u_ldap_host=null, $u_ldap_rdn=null, $u_ldap_pa
 		$u_base_tree_node='ou=people,dc='.$CFG->ldapdc1.',dc='.$CFG->ldapdc2;
 		}	
 	return get_photo($uid, $u_ldap_host, $u_ldap_rdn, $u_ldap_pass, $u_base_tree_node, $u_object_class);
+	}
+
+/**
+ * The only required variable is: $uid
+ *
+ * The following three variables work all together. Or all of them have blank values, or haven't.
+ * 		$ldap_host: ldaphost:port
+ * 		$ldap_rdn: ldap user authority
+ * 		$ldap_pass: ldap password authority
+ *
+ * $base_tree_node: default: 'ou=student,ou=people,dc='.$CFG->ldapdc1.',dc='.$CFG->ldapdc2;
+ *                        or 'ou=people,dc='.$CFG->ldapdc1.',dc='.$CFG->ldapdc2;
+ * $object_class: default: inetOrgPerson
+ */
+function get_photo($uid, $ldap_host=null, $ldap_rdn=null, $ldap_pass=null, $base_tree_node=null, $object_class=null){
+
+    global $CFG;
+
+	$error=false;
+
+	$cached_photo=$CFG->installpath.'/images/tmp/'.$uid.'.jpeg';
+	if(file_exists($cached_photo)){
+		$photo=$CFG->siteaddress.$CFG->sitepath.'/images/tmp/'.$uid.'.jpeg';
+		} 
+	else{
+		if(is_null($ldap_host)){
+		    $ldap_host=$CFG->ldapserver;
+		    $ldap_rdn ='cn='.$CFG->ldapuser.',dc='.$CFG->ldapdc1.',dc='.$CFG->ldapdc2;
+		    $ldap_pass=$CFG->ldappasswd;
+
+		    $ldap_connection=ldap_connect($ldap_host);
+		    if(!ldap_set_option($ldap_connection, LDAP_OPT_PROTOCOL_VERSION, 3)){
+				trigger_error('Failed to set protocol version to 3', E_USER_WARNING);
+				$error=true;
+				}
+		    $ldapbind=ldap_bind($ldap_connection,$ldap_rdn,$ldap_pass );
+		    if(!$ldapbind){
+				trigger_error('Unable to bind', E_USER_WARNING);
+				$error=true;
+				}
+			}
+		else{
+		    $ldap_connection=ldap_connect($ldap_host);
+		    if(!ldap_set_option($ldap_connection, LDAP_OPT_PROTOCOL_VERSION, 3)){
+				trigger_error('Failed to set protocol version to 3', E_USER_WARNING);
+				$error=true;
+				}
+		    $ldapbind=ldap_bind($ldap_connection,$ldap_rdn,$ldap_pass );
+		    if(!$ldapbind){
+				trigger_error('Unable to bind', E_USER_WARNING);
+				$error=true;
+				}
+			}
+
+		if(is_null($base_tree_node)){
+		    $base_tree_node='ou=people,dc=example,dc=com';
+			}
+		if(is_null($object_class)){
+		    $search_filter= '( & (objectClass=inetOrgPerson) (uid='.$uid.') )';
+			}
+		else{
+		    $search_filter= '( & (objectClass='.$object_class.') (uid='.$uid.') )';
+			}
+		$search_result=ldap_search( $ldap_connection, $base_tree_node, $search_filter, array( 'jpegPhoto' ));
+
+		if($search_result){
+		    $entry=ldap_first_entry( $ldap_connection, $search_result );
+
+		    if(!$entry){
+				trigger_error('user id: '.$uid.', not found! ', E_USER_WARNING);
+				$error=true;
+				}
+			else{
+				$attrs=ldap_get_attributes($ldap_connection, $entry);
+
+				if($attrs['jpegPhoto']['count']>0){
+					//echo $attrs['jpegPhoto']['count'];
+					//if ($attrs['count']>0){
+				    $jpeg_data=ldap_get_values_len( $ldap_connection, $entry, "jpegPhoto");
+				    $outfile=$CFG->installpath.'/images/tmp/'.$uid.'.jpeg';
+				    $handle=fopen($outfile, 'wb');
+			   		fwrite($handle,$jpeg_data[0]);
+				    fclose($handle);
+				    $photo=$CFG->siteaddress.$CFG->sitepath.'/images/tmp/'.$uid.'.jpeg';
+					}
+				else{
+				    $photo=$CFG->siteaddress.$CFG->sitepath.'/'.$CFG->applicationdirectory.'/images/blank_profile.jpeg';
+					}
+				}
+			}
+
+		if($error){
+			$photo=$CFG->siteaddress.$CFG->sitepath.'/'.$CFG->applicationdirectory.'/images/blank_profile.jpeg';
+			}
+		}
+	$uid_image=$photo;
+	return $uid_image;
 	}
 
 
@@ -88,7 +185,7 @@ function get_student_photo_small($epfun, $s_photo_size, $s_ldap_host=null, $s_ld
 					trigger_error('### '.$filename,E_USER_WARNING);
 
 					} else {
-					$filename=get_photo2($uid, $s_ldap_host, $s_ldap_rdn, $s_ldap_pass,$s_base_tree_node, $s_object_class);
+					$filename=get_photo($uid, $s_ldap_host, $s_ldap_rdn, $s_ldap_pass,$s_base_tree_node, $s_object_class);
 					}
 					
 				}
@@ -166,7 +263,7 @@ function get_photo_small2($user_type, $epfun, $s_photo_size, $s_ldap_host=null, 
 					trigger_error('### '.$filename,E_USER_WARNING);
 
 					} else {
-					$filename=get_photo2($uid, $s_ldap_host, $s_ldap_rdn, $s_ldap_pass,$s_base_tree_node, $s_object_class);
+					$filename=get_photo($uid, $s_ldap_host, $s_ldap_rdn, $s_ldap_pass,$s_base_tree_node, $s_object_class);
 					}
 					
 				}
@@ -199,192 +296,6 @@ function get_photo_small2($user_type, $epfun, $s_photo_size, $s_ldap_host=null, 
 		}
 	}
 
-
-/**
- * The only required variable is: $uid 
- *
- * The following three variables work all together. Or all of them have blank values, or haven't.
- * 		$ldap_host: ldaphost:port
- * 		$ldap_rdn: ldap user authority
- * 		$ldap_pass: ldap password authority
- * 
- * $base_tree_node: default: 'ou=student,ou=people,dc='.$CFG->ldapdc1.',dc='.$CFG->ldapdc2; 
- *                        or 'ou=people,dc='.$CFG->ldapdc1.',dc='.$CFG->ldapdc2;
- * $object_class: default: inetOrgPerson
- */
-function get_photo($uid, $ldap_host=null, $ldap_rdn=null, $ldap_pass=null, $base_tree_node=null, $object_class=null){
-	
-    global $CFG;
-    
-	$error=false;
-	    
-    if(is_null($ldap_host)){
-        $ldap_host=$CFG->ldapserver;
-        $ldap_rdn ='cn='.$CFG->ldapuser.',dc='.$CFG->ldapdc1.',dc='.$CFG->ldapdc2;
-        $ldap_pass=$CFG->ldappasswd;
-
-        $ldap_connection=ldap_connect($ldap_host);
-        if(!ldap_set_option($ldap_connection, LDAP_OPT_PROTOCOL_VERSION, 3)){
-			trigger_error('Failed to set protocol version to 3', E_USER_WARNING);
-			$error=true;
-			}        
-        $ldapbind=ldap_bind($ldap_connection,$ldap_rdn,$ldap_pass );
-        if(!$ldapbind){
-			trigger_error('Unable to bind', E_USER_WARNING);
-			$error=true;
-			}
-		} 
-	else{
-        $ldap_connection=ldap_connect($ldap_host);
-        if(!ldap_set_option($ldap_connection, LDAP_OPT_PROTOCOL_VERSION, 3)){
-			trigger_error('Failed to set protocol version to 3', E_USER_WARNING);
-			$error=true;
-			}
-        $ldapbind=ldap_bind($ldap_connection,$ldap_rdn,$ldap_pass );
-        if(!$ldapbind){ 
-			trigger_error('Unable to bind', E_USER_WARNING);
-			$error=true;
-			}
-		}
-		
-    if(is_null($base_tree_node)){
-        $base_tree_node='ou=people,dc=example,dc=com';
-		}
-    if(is_null($object_class)){
-        $search_filter= '( & (objectClass=inetOrgPerson) (uid='.$uid.') )';
-		} 
-	else{
-        $search_filter= '( & (objectClass='.$object_class.') (uid='.$uid.') )';
-		}
-    $search_result=ldap_search( $ldap_connection, $base_tree_node, $search_filter, array( 'jpegPhoto' ));
-
-    if($search_result){
-        $entry=ldap_first_entry( $ldap_connection, $search_result );
-
-        if(!$entry){
-			trigger_error($uid.' not found! ', E_USER_WARNING);
-			$error=true;
-			} 
-		else{
-		    $attrs=ldap_get_attributes($ldap_connection, $entry);
-
-		    if($attrs['count']>0){
-		        $jpeg_data=ldap_get_values_len( $ldap_connection, $entry, "jpegPhoto");
-		        $outfile=$CFG->installpath.'/images/tmp/'.$uid.'.jpeg';
-		        $handle=fopen($outfile, 'wb');
-		   		fwrite($handle,$jpeg_data[0]);
-		        fclose($handle);
-		        $photo=$CFG->siteaddress.$CFG->sitepath.'/images/tmp/'.$uid.'.jpeg';
-				}  
-			else{
-		        $photo=$CFG->siteaddress.$CFG->sitepath.'/'.$CFG->applicationdirectory.'/images/blank_profile.jpeg';
-				}
-			}
-		}
-	
-	if($error){
-		$photo=$CFG->siteaddress.$CFG->sitepath.'/'.$CFG->applicationdirectory.'/images/blank_profile.jpeg';
-		}
-	$uid_image=$photo;
-	return $uid_image;
-	}
-
-/**
- * The only required variable is: $uid
- *
- * The following three variables work all together. Or all of them have blank values, or haven't.
- * 		$ldap_host: ldaphost:port
- * 		$ldap_rdn: ldap user authority
- * 		$ldap_pass: ldap password authority
- *
- * $base_tree_node: default: 'ou=student,ou=people,dc='.$CFG->ldapdc1.',dc='.$CFG->ldapdc2;
- *                        or 'ou=people,dc='.$CFG->ldapdc1.',dc='.$CFG->ldapdc2;
- * $object_class: default: inetOrgPerson
- */
-function get_photo2($uid, $ldap_host=null, $ldap_rdn=null, $ldap_pass=null, $base_tree_node=null, $object_class=null){
-
-    global $CFG;
-
-	$error=false;
-
-	$cached_photo=$CFG->installpath.'/images/tmp/'.$uid.'.jpeg';
-	if(file_exists($cached_photo)){
-		$photo=$CFG->siteaddress.$CFG->sitepath.'/images/tmp/'.$uid.'.jpeg';
-		} 
-	else{
-		if(is_null($ldap_host)){
-		    $ldap_host=$CFG->ldapserver;
-		    $ldap_rdn ='cn='.$CFG->ldapuser.',dc='.$CFG->ldapdc1.',dc='.$CFG->ldapdc2;
-		    $ldap_pass=$CFG->ldappasswd;
-
-		    $ldap_connection=ldap_connect($ldap_host);
-		    if(!ldap_set_option($ldap_connection, LDAP_OPT_PROTOCOL_VERSION, 3)){
-				trigger_error('Failed to set protocol version to 3', E_USER_WARNING);
-				$error=true;
-				}
-		    $ldapbind=ldap_bind($ldap_connection,$ldap_rdn,$ldap_pass );
-		    if(!$ldapbind){
-				trigger_error('Unable to bind', E_USER_WARNING);
-				$error=true;
-				}
-			}
-		else{
-		    $ldap_connection=ldap_connect($ldap_host);
-		    if(!ldap_set_option($ldap_connection, LDAP_OPT_PROTOCOL_VERSION, 3)){
-				trigger_error('Failed to set protocol version to 3', E_USER_WARNING);
-				$error=true;
-				}
-		    $ldapbind=ldap_bind($ldap_connection,$ldap_rdn,$ldap_pass );
-		    if(!$ldapbind){
-				trigger_error('Unable to bind', E_USER_WARNING);
-				$error=true;
-				}
-			}
-
-		if(is_null($base_tree_node)){
-		    $base_tree_node='ou=people,dc=example,dc=com';
-			}
-		if(is_null($object_class)){
-		    $search_filter= '( & (objectClass=inetOrgPerson) (uid='.$uid.') )';
-			}
-		else{
-		    $search_filter= '( & (objectClass='.$object_class.') (uid='.$uid.') )';
-			}
-		$search_result=ldap_search( $ldap_connection, $base_tree_node, $search_filter, array( 'jpegPhoto' ));
-
-		if($search_result){
-		    $entry=ldap_first_entry( $ldap_connection, $search_result );
-
-		    if(!$entry){
-				trigger_error('user id: '.$uid.', not found! ', E_USER_WARNING);
-				$error=true;
-				}
-			else{
-				$attrs=ldap_get_attributes($ldap_connection, $entry);
-
-				if ($attrs['jpegPhoto']['count']>0) {
-					//echo $attrs['jpegPhoto']['count'];
-					//if ($attrs['count']>0){
-				    $jpeg_data=ldap_get_values_len( $ldap_connection, $entry, "jpegPhoto");
-				    $outfile=$CFG->installpath.'/images/tmp/'.$uid.'.jpeg';
-				    $handle=fopen($outfile, 'wb');
-			   		fwrite($handle,$jpeg_data[0]);
-				    fclose($handle);
-				    $photo=$CFG->siteaddress.$CFG->sitepath.'/images/tmp/'.$uid.'.jpeg';
-					}
-				else{
-				    $photo=$CFG->siteaddress.$CFG->sitepath.'/'.$CFG->applicationdirectory.'/images/blank_profile.jpeg';
-					}
-				}
-			}
-
-		if($error){
-			$photo=$CFG->siteaddress.$CFG->sitepath.'/'.$CFG->applicationdirectory.'/images/blank_profile.jpeg';
-			}
-		}
-	$uid_image=$photo;
-	return $uid_image;
-	}
 
 /**
  * The only required variables are: 
