@@ -4,15 +4,18 @@
  * Used to distinguish selections available to year heads or form tutors
  */
 
-$required='yes';
+
+if(!isset($onchange)){$onchange='no';}
+if(!isset($required)){$required='yes';}
 
 if(sizeof($ryids)>0){
-	$selyid=$ryids[0];
+	if(!isset($selyid)){$selyid=$ryids[0];}
 ?>
 <div class="left">
 	<label for="Year group"><?php print_string('yeargroup');?></label>
 	<select id="Year group" name="newyid" eitheror="Form group" tabindex="<?php print $tab++;?>"
-		 style="width:20em;" <?php if($required=='yes'){ print ' class="requiredor" ';} ?> >
+		 <?php if($onchange=='yes'){ print ' onchange="processContent(this);" ';} ?>
+			style="width:20em;" <?php if($required=='yes'){ print ' class="requiredor" ';} ?> >
     <option value=""></option>
 <?php
 		if(!isset($rfids)){$rfids=array();}
@@ -38,12 +41,13 @@ if(sizeof($ryids)>0){
 	}
 
 if(sizeof($rfids)>0){
-	$selfid=$rfids[0];
+	if(!isset($selfid)){$selfid=$rfids[0];}
 ?>
 <div class="right">
 	<label for="Form group"><?php print_string('formgroup');?></label>
 	<select type="text" id="Form group" name="newfid"  eitheror="Year group"
 	  tabindex="<?php print $tab++;?>" style="width:20em;" 
+	  <?php if($onchange=='yes'){ print ' onchange="processContent(this);" ';} ?>
 	  <?php if($required=='yes'){ print ' class="requiredor" ';} ?> >
 	<option value=""></option>
 <?php
