@@ -3,6 +3,13 @@ Version ClaSS-0.9.18 release (2010/4/30)
 
 Included a late to registration count on the Attendance Profile.
 
+Removed the html function twoplus_print.
+
+Changed the Register completion list to use a httpscript called
+register_print.
+
+Working in progress on the transition of Report assessments page to use of
+assessment profiles.
 
 
 Version ClaSS-0.9.17 release (2010/4/20)
